# BrainOutTasks

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Tasks/MedianTwoSortedArrays/: CMakeLists.txt
Tasks/MedianTwoSortedArrays/Headers/MedianTwoSortedArrays/: MedianTwoSortedArrays.h
Tasks/MedianTwoSortedArrays/Sources/: MedianTwoSortedArrays.cpp
Tasks/MedianTwoSortedArrays/Tests/: Test.cpp
Tasks/ReverseKElementsInList/: CMakeLists.txt
Tasks/ReverseKElementsInList/Headers/ReverseKElementsInList/: ReverseKElementsInList.h
Tasks/ReverseKElementsInList/Sources/: ReverseKElementsInList.cpp
Tasks/ReverseKElementsInList/Tests/: Tests.cpp
Tasks/SortVectorOfLists/: CMakeLists.txt
Tasks/SortVectorOfLists/Headers/SortVectorOfLists/: SortVectorOfLists.h
Tasks/SortVectorOfLists/Sources/: SortVectorOfLists.cpp
Tasks/SortVectorOfLists/Tests/: Tests.cpp
